ADD DECISION TREE PPT

--- a/devops/index.html
+++ b/devops/index.html
@@ -125,7 +125,16 @@
 		captured by a probe (running Wireshark) that was located in Tata Communications network. This is the first successful call between mobile operators over an IP eXchange (IPX) framework consisting of:
 		<br>
 		TELUS &lt=SIP-I (ANSI88)=&gt Tata Communications &lt=SIP-I (ITU-T92+)=&gt Telekom Austria. The voice quality of this call was subjectively rated by the two parties on call. The voice quality was also objectively verified through QOS (Jitter, Latency, Packet Loss, R-Factor) measurements.
-    </p></div><br><br><br>
+		
+		To foster interest and elucidate an approach for Decision Making, Operations Research and Supervised Machine Learning,
+		I developed and hosted a training session for at&t's Machine Learning community. The presentation touches on
+		Machine Learning concepts and then dives deeper into the Mathematics that predicate a Decision Tree's rules for classifying data.  
+		<br><br>
+		View the presentation here:
+		<a href="presentations/Decision_Tree_Demo.pptx"
+		   target="_blank">ML Decision Tree Presentation</a>
+	
+	</p></div><br><br><br>
 	
 	<h2 id="WHITE_PAPERS">WHITE PAPERS</h2>
     <div><p>
