--- a/devops/index.html
+++ b/devops/index.html
@@ -68,8 +68,9 @@
 	<h1>SECTIONS</h1>
 		<ul style="list-style-type: upper-roman;">
 			<li><a href="#TRIALS">TRIALS</a></li>
-			<li><a href="#PRESENTATIONS">PRESENTATIONS</a></li>
 			<li><a href="#SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</a></li>
+			<li><a href="#DEV_OPS">DEV OPS</a></li>
+			<li><a href="#PRESENTATIONS">PRESENTATIONS</a></li>
 			<li><a href="#WHITE_PAPERS">WHITE PAPERS</a></li>
 		</ul><br><br><br>
 	
@@ -86,20 +87,28 @@
 		See <a href="#PRESENTATIONS">PRESENTATIONS</a>
 		for more information on this trial.
     </p></div><br><br>
-		
+	
 	<h2 id="SOFTWARE_DEVELOPMENT_PROCESSES">SOFTWARE DEVELOPMENT PROCESSES</h2>
     <div><p>
-		I enhanced productivity and reliability for Network Security Applications by developing and implementing Agile Software Development Processes for development, testing and delivery to production. 
+		I enhanced productivity and reliability for Network Security Applications by developing and implementing Agile Software Development Processes for development, testing and delivery to production.
 		<br><br>
 		This cross functional 
 		<a href="software_dev/SW_Lifecycle_Process.pdf"
 		   target="_blank">Continuous Integration and Delivery (CI/CD). Work Flow</a>
-		presents a methodology; derived from fundamental concepts of the Software Development Lifecycle that promote accountability and incorporate Agile processes for HW/SW Development/Deployment:
+		presents a methodology; derived from fundamental concepts of the Software Development Lifecycle that promote accountability and incorporate Agile processes for HW/SW Development/Deployment.
 		<br><br>
 		I developed a solution and guidelines for transitioning mission critical CSO physical servers to a
 		<a href="software_dev/DMZ_Cloud.pdf"
 		   target="_blank">Virtual Environment</a>
 		by utilizng VMware ESX Hypervisor to support an Infrastructure as a service (IaaS) cloud computing service model.
+	</p></div><br><br>
+	
+	<h2 id="DEV_OPS">DEV_OPS</h2>
+    <div><p>
+		Increased the efficiency and accuracy of test forensics by developing a 
+		<a href="scripts/Verify_ParseTwoFiles_MoreInfo.bash"
+		   target="_blank">parser</a>
+		to analyze and compare fields in large data sets.
 	</p></div><br><br>
 		
 	<h2 id="PRESENTATIONS">PRESENTATIONS</h2>
