--- a/devops/index.html
+++ b/devops/index.html
@@ -103,7 +103,7 @@
 		by utilizng VMware ESX Hypervisor to support an Infrastructure as a service (IaaS) cloud computing service model.
 	</p></div><br><br>
 	
-	<h2 id="DEV_OPS">DEV_OPS</h2>
+	<h2 id="DEV_OPS">DEV OPS</h2>
     <div><p>
 		Increased the efficiency and accuracy of test forensics by developing a 
 		<a href="scripts/Verify_ParseTwoFiles_MoreInfo.bash"
