--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
 						<a class="dropdown-item" href="/cs6238" title="Secure Computer Systems (SCI)">Secure Computer Systems (SCI)</a>
 						<a class="dropdown-item" href="/cs6750" title="Human Computer Interaction (HCI)">Human-Computer Interaction (HCI)</a>
 					<h5 class="dropdown-header">COMPUTER VISION (CV)</h5>
-						<a class="dropdown-item" href="https://goo.gl/photos/KEpwD9mZ3EBcycQk7"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-1</a>
-						<a class="dropdown-item" href="https://goo.gl/photos/Hv9WaPvd4QrQJ9TZA"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype-2</a>
+						<a class="dropdown-item" href="https://robert-bobkoskie.github.io/cv-app/"title="Computer Vision (CV) Prototype" target="_blank">CV Prototype</a>
 				</div>
 			</div> 
 		</div>
