--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -67,6 +67,12 @@
         target="_blank">CS7641: Machine Learning (ML)</a>
         class projects.
     <br>
+	
+	<h1>ML Papers</h1>
+		<ul style="list-style: none;">
+			<li><a href="docs/Presentation_Data_Cleaning.mkv" title="Data Cleaning Presentation" target="_self">Data Cleaning Presentation</a></li>
+		</ul>
+	
 	<h1>ML Papers</h1>
 		<ul style="list-style: none;">
 			<li><a href="docs/Demo_ML_SL_DT2.pdf" title="Decision Tree Tutorial" target="_self">Decision Tree Tutorial</a></li>
