--- a/cs7646/index.html
+++ b/cs7646/index.html
@@ -68,9 +68,9 @@
         class projects.
     <br>
 	
-	<h1>ML Papers</h1>
+	<h1>Data Engineering</h1>
 		<ul style="list-style: none;">
-			<li><a href="docs/Presentation_Data_Cleaning.mkv" title="Data Cleaning Presentation" target="_self">Data Cleaning Presentation</a></li>
+			<li><a href="docs/Presentation_Data_Cleaning.mp4" title="Data Cleaning Presentation" target="_self">Data Cleaning Presentation</a></li>
 		</ul>
 	
 	<h1>ML Papers</h1>
@@ -87,7 +87,7 @@
 			<li><a href="docs/report_Assess_Learners.pdf" title="Machine Learning Assess Learners" target="_self">Machine Learning Assess Learners</a></li>
 			<li><a href="docs/report_Strategy_Learner.pdf" title="Predicting Stock Pricing with Strategy Learners" target="_self">Predicting Stock Pricing with Strategy Learners</a></li>
 						
-			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" title="Artificial Intelligence through Computer Vision" target="_self">Artificial Intelligence through Computer Vision</a></li>
+			<li><a href="docs/Project3_Reflection-rbobkoskie3.pdf" title="Agentic AI Computer Vision" target="_self">Agentic AI Computer Vision</a></li>
 		</ul>
 		<br><br><br>
 
